# SCPCBR

./: .gitattributes  CMakeLists.txt  PREPARE_COMMIT.md  README.md  copy_dlls.ps1
SCPCBR/AudioEngine/: AudioEngine.cpp  AudioEngine.h
SCPCBR/Dependencies/include/discord/: event.h  types.h
SCPCBR/Launcher/: Launcher.cpp
SCPCBR/PreloadManager/: PreloadManager.cpp
SCPCBR/SplashScreen/: SplashScreen.cpp
SCPCBR/Util/: Util.cpp  Util.h
scripts/: fetch_deps.ps1
